--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <p>my name is nazrul</p>
 <p>this is a bug fixing repo</p>
 <p>i am trying to fixing buggs</p>
+<p>now i am learnig git and github</p>
