--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 <p>this is a bug fixing repo</p>
 <p>i am trying to fixing buggs</p>
 <p>now i am learnig git and github</p>
-<p>this is a new feature</p>
+<p>this is a new feature(button)</p>
